# Garage-Door-ESP32

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/: pull_request_template.md
components/app_config/: CMakeLists.txt  app_config.cpp  config_repository.cpp  password.cpp
components/app_config/include/: app_config.hpp  config_repository.hpp  password.hpp
components/backup_recovery/: CMakeLists.txt  backup_envelope.cpp  backup_service.cpp  restore_staging.cpp
components/backup_recovery/include/: backup_envelope.hpp  backup_service.hpp  restore_staging.hpp
components/bootstrap_credentials/: CMakeLists.txt  bootstrap_credentials.cpp
components/bootstrap_credentials/include/: bootstrap_credentials.hpp
components/captive_dns/: CMakeLists.txt  captive_dns.cpp
components/captive_dns/include/: captive_dns.hpp
components/gate_controller/: CMakeLists.txt  gate_controller.cpp  operator_domain.cpp  relay_pulse_guard.cpp
components/gate_controller/include/: gate_controller.hpp  operator_domain.hpp  relay_pulse_guard.hpp
components/gate_hardware/: CMakeLists.txt  gate_hardware.cpp  sensor_debouncer.cpp
components/gate_hardware/include/: gate_hardware.hpp  sensor_debouncer.hpp
components/gate_profile/: CMakeLists.txt  gate_profile.cpp
components/gate_profile/include/: gate_profile.hpp
components/gate_runtime/: CMakeLists.txt  gate_runtime.cpp
components/gate_runtime/include/: gate_runtime.hpp
components/homespan/: CMakeLists.txt
components/homespan_bridge/: CMakeLists.txt  homekit_projection.cpp  homespan_compatibility.cpp
components/homespan_bridge/include/: homekit_projection.hpp  homespan_compatibility.hpp
components/management_api/: CMakeLists.txt  management_api.cpp
components/management_api/include/: management_api.hpp
components/management_server/: CMakeLists.txt  cleanup_conflict_assets.cmake  management_server.cpp
components/management_server/assets/: app 3.js  app.css  app.js  index.html
components/management_server/include/: management_server.hpp
components/network_manager/: CMakeLists.txt  network_manager.cpp
components/network_manager/include/: network_manager.hpp
components/ota_api/: CMakeLists.txt  ota_api.cpp
components/ota_api/include/: ota_api.hpp
components/ota_manager/: CMakeLists.txt  ota_manager.cpp
components/ota_manager/include/: ota_manager.hpp
components/provisioning/: CMakeLists.txt  provisioning.cpp
components/provisioning/include/: provisioning.hpp
components/setup_api/: CMakeLists.txt  setup_api.cpp
components/setup_api/include/: setup_api.hpp
components/signal_decoder/: CMakeLists.txt  signal_decoder.cpp
components/signal_decoder/include/: signal_decoder.hpp
components/web_auth/: CMakeLists.txt  web_auth.cpp
components/web_auth/include/: web_auth.hpp
docs/: backup-and-recovery.md  development-status.md  ducati-gate-logic.txt  gate-profile.md  hardware.md  ota-update.md  provisioning.md  reference-notes.md  signal-decoder-commissioning.md
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
plans/: configurable-signal-decoder.md  implementation-plan.md  operator-profile-architecture.md
scripts/: build-firmware.sh  build-ui.sh  check-http-route-capacity.py  test-host.sh  verify-environment.sh
test/host/: CMakeLists.txt  app_config_test.cpp  gate_controller_test.cpp  homekit_projection_test.cpp  operator_domain_test.cpp  relay_pulse_guard_test.cpp  sensor_debouncer_test.cpp  signal_decoder_test.cpp
webui/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
webui/src/: App.svelte  gate-view.js  gate-view.test.js  main.js  styles.css
webui/src/components/: AppHeader.svelte  DashboardTabs.svelte
webui/src/pages/: AccessPage.svelte  BackupPage.svelte  FirmwarePage.svelte  GatePage.svelte  LoginPage.svelte  LogsPage.svelte  NetworkPage.svelte  SetupPage.svelte  StatusPage.svelte
